# dijkstra-algorithm

./: .gitignore  README.md  __main__.py  main.py  pyproject.toml  requirements.txt
docs/: description.md  exemplo.txt
frontend/: package-lock.json  package.json  sample_paths.json
frontend/src/: App.js
source/config/: ApiManager.py  ApiManager.py~  api.py
source/router/: dijkstra.py
source/schema/: payload.py
source/service/: dijkstra.py
