[tool.poetry]
name = "dijkstra-algorithm"
version = "0.1.0"
description = "Aplicação do algoritmo de Dijkstra em Python"
authors = ["Robert Lopes Terra <contatorobertlopes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
